--- a/dcc-portal-ui/src/main/js/app/styles/styles.css
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.css
@@ -3321,18 +3321,19 @@ aside .t_tabs__tab {
 /* line 16, _modules/_popover.scss */
 .popover:hover .popover-outer-container {
   opacity: 1;
+  z-index: 100;
 }
-/* line 20, _modules/_popover.scss */
+/* line 21, _modules/_popover.scss */
 .popover .popover-outer-container {
   position: absolute;
   background: transparent;
-  z-index: 100;
+  z-index: -1;
   top: -10px;
   left: -28.2rem;
   opacity: 0;
   transition: opacity ease-in-out 0.25s;
 }
-/* line 32, _modules/_popover.scss */
+/* line 34, _modules/_popover.scss */
 .popover .popover-outer-container .popover-inner-container-border {
   position: absolute;
   background: #000;
@@ -3349,7 +3350,7 @@ aside .t_tabs__tab {
   -moz-box-shadow: -2px 4px 14px -1px rgba(0, 0, 0, 0.75);
   box-shadow: -2px 4px 14px -1px rgba(0, 0, 0, 0.75);
 }
-/* line 48, _modules/_popover.scss */
+/* line 50, _modules/_popover.scss */
 .popover .popover-outer-container .popover-inner-container-border .arrow {
   position: absolute;
   opacity: 1;
@@ -3361,7 +3362,7 @@ aside .t_tabs__tab {
   border-bottom: 10px solid transparent;
   border-left: 10px solid #000;
 }
-/* line 63, _modules/_popover.scss */
+/* line 65, _modules/_popover.scss */
 .popover .popover-outer-container .popover-inner-container {
   position: relative;
   background: #fff;
@@ -3378,43 +3379,43 @@ aside .t_tabs__tab {
   overflow-x: hidden;
   overflow-y: auto;
 }
-/* line 81, _modules/_popover.scss */
+/* line 83, _modules/_popover.scss */
 .popover .popover-outer-container .popover-inner-container .popover-title {
   font-size: 1.4rem;
   margin: 0 auto 0.5rem auto;
   font-weight: bold;
 }
-/* line 89, _modules/_popover.scss */
+/* line 91, _modules/_popover.scss */
 .popover .popover-outer-container .popover-inner-container .popover-body {
   width: 100%;
   height: 100%;
   font-size: 1.2rem;
 }
-/* line 98, _modules/_popover.scss */
+/* line 100, _modules/_popover.scss */
 .popover .popover-anchor-container {
   text-decoration: none;
   color: #000;
 }
-/* line 103, _modules/_popover.scss */
+/* line 105, _modules/_popover.scss */
 .popover .popover-anchor-container:hover {
   cursor: pointer;
   color: #0e5e94;
 }
-/* line 109, _modules/_popover.scss */
+/* line 111, _modules/_popover.scss */
 .popover .popover-icon-before {
   margin-right: 1rem;
 }
-/* line 113, _modules/_popover.scss */
+/* line 115, _modules/_popover.scss */
 .popover .popover-icon-after {
   margin-left: 0.1rem;
 }
-/* line 117, _modules/_popover.scss */
+/* line 119, _modules/_popover.scss */
 .popover .popover-label {
   display: inline-block;
   border-bottom: 1px dashed;
   line-height: 1.1rem;
 }
-/* line 123, _modules/_popover.scss */
+/* line 125, _modules/_popover.scss */
 .popover [class^="icon-"] {
   border: none;
 }
